@@ -10,6 +10,7 @@ cgrates (0.10.3~dev) UNRELEASED; urgency=medium
   * [SessionS] Cloned the charging interval added on EventCost merge 
   * [FilterS] Optimized the automated index fields matching
   * [AgentS] Added *routes_maxcost flag
+  * [SessionS] Replaced max_call_duration config with default_usage for each ToR
 
  -- DanB <danb@cgrates.org>  Thu, 08 Oct 2020 16:23:58 +0300
 
